[package]
name = "advancedresearch-higher_order_core"
version = "0.3.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["advancedresearch", "higher", "order", "core"]
description = "Core structs and traits for programming with higher order structures in Rust"
license = "MIT"
repository = "https://github.com/advancedresearch/higher_order_core.git"
homepage = "https://github.com/advancedresearch/higher_order_core"
documentation = "https://docs.rs/advancedresearch-higher_order_core"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "higher_order_core"

[dependencies]
